<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cg.stevendende.deliciousrecipes.ui.RecipeDetailsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/ingredientsRL"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="1dp">

                <TextView
                    android:id="@+id/ingredients"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left|start"
                    android:padding="@dimen/recipe_details_ingredients_tv_padding"
                    android:text="@string/recipe_details_ingeredients"
                    android:textSize="@dimen/recipe_details_step_tv_size"
                    android:layout_toLeftOf="@+id/recipeStepPosition"
                    android:layout_toStartOf="@+id/recipeStepPosition" />
            </RelativeLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/stepsRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/recipe_details_steps_top_margin" />

    </LinearLayout>

</FrameLayout>
