<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cg.stevendende.deliciousrecipes.ui.RecipeIngredientsFragment">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/ingredientsRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/recipe_details_steps_top_margin" />
</FrameLayout>
