...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/exoPlayer"
            android:orientation="vertical">

            <TextView
                android:id="@+id/shortDescriptionDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/ingredient_item_padding"
                android:textColor="@color/colorTextPrimary"
                android:textSize="@dimen/recipe_details_step_header_tv_size" />

...
